--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
-<body >
-    <div id="header">
+<body  id="header">
+    <div >
     <main class="container py-5 p-md-5 position-relative ">
         
         <img class="position-relative top-0 start-100" src="src/moon.png" id='icon'>
