--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <!-- add button -->
                     <button type="submit" id="add" class="badge text-bg-primary">Add</button> 
                     <button id="download-btn"  class=" badge text-bg-primary" onclick="window.print()">Download your planner</button>
-                    <button type="submit" id="delete-all" class=" badge text-bg-primary " onclick="deleteall()">Delete all</button> 
+                    <button type="submit" id="delete-all" class=" badge text-bg-primary " onclick="deleteall('contentvp')">Delete all</button> 
                 
                 </div>  
             </form>  
