fix: delete all, fa-trash position, refresh error

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </div>
                         <!-- submit button -->
                         <div class="btn-group">
-                            <button type="submit"  id="delete-all"  class="badge text-bg-primary" onclick="deleteall('delcontent')"> Delete All</button>
+                            <button type="button"  id="delete-all"  class="badge text-bg-primary" onclick="deleteall('delcontent')"> Delete All</button>
                         </div>
                 </div>      
             </form>  
@@ -53,8 +53,8 @@
                 <div id="contentvp">
                     <div id="mytodo">
                         <h2 class="text-center " >Your To Do's!</h2>
-                            <div id="delcontent">
-                                    <ul ></ul>
+                            <div>
+                                    <ul id="delcontent"></ul>
                                     <div>
                                     <p class="text-center" >-</p>
                                     </div>
