--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="container py-5 p-md-5 position-relative ">
         
             <img  src="src/moon.png" id='icon'>
-            <h1 class="text-center my-4">To Do List</h1>
+            <h1 class="text-center my-4" id="heading1">To Do List</h1>
     
             <!-- Bootstrap CSS -->
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -56,7 +56,7 @@
             <section >
                 <div id="contentvp">
                     <div id="mytodo">
-                        <h2 class="text-center " >Your To Do's!</h2>
+                        <h2 class="text-center "  id="heading2">Your To Do's!</h2>
                             <div class="contentdiv">
                                     <ul id="delcontent"></ul>
                                     <div>
