--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyPlanner</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="src/myplanner.png" type="x-icon">
     <!-- local files  -->
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap -->
@@ -28,7 +30,7 @@
             <link rel="icon" type="image/x-icon" href="src/favicon.ico" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-            <form class="fw-semibold fs-5" id="contents">
+            <form class="fw-semibold fs-5 ml-5" id="contents">
             <!-- <div class="d-inline">     -->
                 <div class="inputdiv">
                     <!-- input task -->
