disabled download button for correction

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                         <button type="submit"  id="add" class="badge text-bg-primary">Add Task</button>
                     </div>
                     <!-- download button -->
-                    <div class="btn-group">
+                    <!-- <div class="btn-group">
                         <button type="button"  id="download-btn" class="badge text-bg-primary" onclick="window.print()">Download Planner</button>
-                    </div>
+                    </div> -->
                     <!-- submit button -->
                     <div class="btn-group">
                         <button type="button"  id="delete-all"  class="badge text-bg-primary" onclick="deleteall('delcontent')"> Delete All</button>
